<resources>
    <string name="app_name">EDAMAMMVVM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="american">American</string>
    <string name="asian">Asian</string>
    <string name="british">British</string>
    <string name="chinese">Chinese</string>
    <string name="eastern_europe">Eastern Europe</string>
    <string name="french">French</string>
    <string name="indian">Indian</string>
    <string name="japanese">Japanese</string>
    <string name="kosher">Kosher</string>
    <string name="nordic">Nordic</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="south_american">South American</string>
    <string name="south_east_asian">South East Asian</string>
    <string name="biscuits_and_cookies">Biscuits and cookies</string>
    <string name="bread">Bread</string>
    <string name="cereals">Cereals</string>
    <string name="main_course">Main course</string>
    <string name="side_dish">Side dish</string>
    <string name="starter">Starter</string>
    <string name="soup">Soup</string>
    <string name="pancakes">Pancakes</string>
    <string name="sweets">Sweets</string>
    <string name="egg_free">egg-free</string>
    <string name="low_sodium">low-sodium</string>
    <string name="_kosher">kosher</string>
    <string name="fish_free">fish-free</string>
    <string name="fodmap_free">fodmap-free</string>
    <string name="low_fat_abs">low-fat-abs</string>
    <string name="low_potassium">low-potassium</string>
    <string name="low_sugar">low-sugar</string>
    <string name="lupine_free">lupine-free</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="mollusk_free">mollusk-free</string>
    <string name="no_oil_added">no-oil-added</string>
    <string name="paleo">paleo</string>
    <string name="peanut_free">peanut-free</string>
    <string name="pescatarian">pescatarian</string>
    <string name="pork_free">pork-free</string>
    <string name="red_meat_free">red-meat-free</string>
    <string name="sugar_conscious">sugar-conscious</string>
    <string name="sulfite_free">sulfite-free</string>
    <string name="tree_nut_free">tree-nut-free</string>
    <string name="vegan">vegan</string>
    <string name="vegetarian">vegetarian</string>
    <string name="wheat_free">wheat-free</string>
</resources>